--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -4,38 +4,39 @@
   <string name="navigation_drawer_open">Gezinme çekmecesini aç</string>
   <string name="navigation_drawer_close">Gezinme çekmecesini kapat</string>
   <string name="action_settings">Ayarlar</string>
-  <string name="add_feed">Besleme ekle</string>
-  <string name="title_activity_edit_feed">Beslemeye abone ol</string>
+  <string name="add_feed">Yayın ekle</string>
+  <string name="title_activity_edit_feed">Yayına abone ol</string>
   <string name="url">Bağlantı</string>
   <string name="tag">Etiket</string>
-  <string name="add_feed_search_hint">Besleme bağlantısı</string>
+  <string name="add_feed_search_hint">Yayın bağlantısı</string>
   <string name="title">Başlık</string>
 
   <string name="by_author_on_date">%1$s, %2$s</string>
   <string name="on_date">%1$s</string>
   <string name="save">Kaydet</string>
-  <string name="empty_feed_top">Burada okuyacak bir şey yok. Arzu eder misiniz…</string>
+ a <string name="empty_feed_top">Burada okuyacak bir şey kalmadı. Arzu edersiniz</string>
   <string name="empty_feed_open">
-    <![CDATA[Başka bir besleme <font color="#607D8B">aç</font>]]></string>
+    <![CDATA[Başka bir yayına <font color="#607D8B">geçebilir</font>]]></string>
   <string name="empty_feed_add">
-    <![CDATA[Daha fazla yayın <font color="#607D8B">ekle</font>]]></string>
-  <string name="empty_no_feeds_top">Nothing to read yet.\nGet started
-    by
+    <![CDATA[Daha fazla yayın <font color="#607D8B">ekleyebilirsiniz.</font>]]></string>
+  <string name="empty_no_feeds_top">Henüz okunabilir birşey yok.\nArzu edersiniz
   </string>
   <string name="empty_no_feeds_add">
-    <![CDATA[<font color="#607D8B">Adding</font> some feeds]]></string>
+a </string>
+  <string name="empty_no_feeds_add">
+    <![CDATA[Daha fazla yayın <font color="#607D8B">ekleyebilirsiniz</font>]]></string>
   <string name="search_feed_empty_hint">Bir yayın adresi girin</string>
   <string name="mark_as_read">Okundu olarak işaretle</string>
   <string name="mark_as_unread">Okunmamış olarak işaretle</string>
   <string name="mark_all_as_read">Tümünü okundu olarak işaretle</string>
-  <string name="edit_feed">Beslemeyi düzenle</string>
-  <string name="delete_feed">Beslemeyi sil</string>
+  <string name="edit_feed">Yayını düzenle</string>
+  <string name="delete_feed">Yayını sil</string>
   <string name="show_all_items">Tüm öğeleri göster</string>
   <string name="show_unread_items">Okunmamış öğeleri göster</string>
-  <string name="new_items_available">Yeni öğeler mevcut</string>
+  <string name="new_items_available">Yeni içerikler var</string>
   <string name="view">Görünüm</string>
   <string name="no_tag">Etiket yok</string>
-  <string name="notify_for_new_items">Yeni öğeleri bildir</string>
+  <string name="notify_for_new_items">Yeni içerikleri bildir</string>
   <string name="dont_notify_for_new_items">Bildirimleri durdur</string>
   <string name="toggle_read_status">Okuma durumunu değiştir</string>
   <string name="open_link_in_browser">Bağlantıyı tarayıcıda aç</string>
@@ -51,42 +52,44 @@
   <string name="no_such_feed">Böyle bir besleme bulunamadı. Https kullanmayı deneyin.</string>
   <string name="nothing_to_display">Gösterilecek bir şey yok!</string>
   <string name="title_activity_settings">Ayarlar</string>
-  <string name="all_feeds">Tüm beslemeler</string>
+  <string name="all_feeds">Tüm yayınlar</string>
 
   <string name="sync_option_manually">El ile</string>
   <string name="sync_option_every_15min">15 dakikada bir</string>
   <string name="sync_option_every_30min">30 dakikada bir</string>
-  <string name="sync_option_every_hour">Her saat</string>
+  <string name="sync_option_every_hour">Saat başı</string>
   <string name="sync_option_every_3_hours">3 saatte bir</string>
   <string name="sync_option_every_6_hours">6 saatte bir</string>
   <string name="sync_option_every_12_hours">12 saatte bir</string>
-  <string name="sync_option_every_day">Her gün</string>
+  <string name="sync_option_every_day">Günde bir</string>
 
   <string name="synchronization">Senkronizasyon</string>
-  <string name="only_on_wifi">Yalnızca WiFi</string>
+  <string name="only_on_wifi">Yalnızca kablosuz bağlantı</string>
   <string name="show_thumbnails">Küçük resimleri göster</string>
   <string name="may_result_data_charges">Mobil veri ücretlerine neden olabilir.</string>
   <string name="only_when_charging">Sadece şarj olurken</string>
-  <string name="image_loading">Resim yükleniyor</string>
-  <string name="no_activity_for_link">Bu bağlantıyı açacak bir etkinlik bulamadım</string>
+  <string name="image_loading">Görsel yükleniyor</string>
+  <string name="no_activity_for_link">Bu bağlantıyı açacak bir etkinlik bulunamadı</string>
   <string name="check_for_updates">Güncellemeleri kontrol et</string>
   <string name="on_startup">Başlangıçta</string>
   <string name="show_fab">Kayan işlem düğmesini göster</string>
   <string name="include_mobile_hotspots">Mobil etkin noktaları dahil et</string>
   <string name="updated_feeds">Güncellenen beslemeler</string>
   <string name="selected">Seçildi</string>
-  <string name="notification_channel_name">Okunmamış beslemeler</string>
-  <string name="notification_channel_description">Bildirimler yalnızca yapılandırılmış akışlardaki okunmamış öğeler için gösterilir</string>
-  <string name="open_in_reader">Reader</string>
+  <string name="notification_channel_name">Okunmamış yayınlar</string>
+  <string name="notification_channel_description">Bildirimler yalnızca yapılandırılmış yayınlardaki okunmamış öğeler için gösterilir</string>
+k <string name="notification_channel_name">Okunmamış yayınlar</string>
+  <string name="notification_channel_description">Bildirimler yalnızca yapılandırılmış yayınlardaki okunmamış öğeler için gösterilir</string>
+  <string name="open_in_reader">Okuyucu içinde</string>
   <string name="open_in_webview">Web görünümünde</string>
-  <string name="open_in_default_browser">Varsayılan tarayıcı</string>
-  <string name="open_in_custom_tab">Özel sekme</string>
+  <string name="open_in_default_browser">Varsayılan tarayıcıda</string>
+  <string name="open_in_custom_tab">Özel sekmede</string>
   <string name="open_item_by_default_with">Öğeleri varsayılan olarak aç</string>
   <string name="open_links_with">Bağlantıları şununla aç:</string>
-  <string name="reader_settings">Reader</string>
+  <string name="reader_settings">Okuyucu</string>
   <string name="open_link_in_web_view">Bağlantıyı web görünümünde aç</string>
   <string name="open_in_web_view">Web görünümünde aç</string>
-  <string name="max_feed_items">Besleme başına maksimum öğe sayısı</string>
+  <string name="max_feed_items">Yayın başına maksimum öğe sayısı</string>
   <string name="could_not_load_url">Bağlantı yüklenemedi</string>
 
   <string name="theme_system">Sistemi takip et</string>
@@ -99,8 +102,8 @@
   <string name="sort">Sırala</string>
   <string name="send_bug_report">Hata raporu gönder</string>
   <string name="no_email_client">E-posta istemcisi açılamadı</string>
-  <string name="touch_to_play_video">Vide oynatmak için dokun</string>
-  <string name="javascript">Javascript</string>
+  <string name="touch_to_play_video">Videoyu oynatmak için dokun</string>
+  <string name="javascript">JavaScript</string>
   <string name="open_feed">Beslemeyi aç</string>
   <string name="mark_items_below_as_read">Aşağıdaki öğeleri okundu olarak işaretle</string>
   <string name="discovered_feeds_list">Keşfedilen yayın listesi</string>
