updated strings ptbr

--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -35,7 +35,7 @@
   <string name="new_items_available">Novos itens disponíveis</string>
   <string name="view">Ver</string>
   <string name="no_tag">Sem categoria</string>
-  <string name="notify_for_new_items">Notificação sobre novos itens</string>
+  <string name="notify_for_new_items">Notificar sobre os novos itens</string>
   <string name="dont_notify_for_new_items">Parar as notificações</string>
   <string name="toggle_read_status">Alternar o status da leitura</string>
   <string name="open_link_in_browser">Abrir link no navegador</string>
@@ -94,14 +94,15 @@
   <string name="theme_day">Dia</string>
   <string name="theme_night">Noite</string>
   <string name="theme">Tema</string>
-  <string name="sort_newest_first">Mais novos primeiros</string>
-  <string name="sort_oldest_first">Mais antigos primeiros</string>
+  <string name="sort_newest_first">Primeiro mais novos</string>
+  <string name="sort_oldest_first">Primeiro mais antigos</string>
   <string name="sort">Ordenar por</string>
-  <string name="send_bug_report">Enviar relatório de erros</string>
-  <string name="no_email_client">Não foi possível abrir o email</string>
+  <string name="send_bug_report">Enviar relatório de falhas</string>
+  <string name="no_email_client">Não foi possível abrir o e-mail</string>
   <string name="touch_to_play_video">Toque para reproduzir o vídeo</string>
   <string name="javascript">Javascript</string>
   <string name="open_feed">Abrir o feed</string>
+  <string name="mark_items_above_as_read">Marque os itens acima como lidos</string>
   <string name="mark_items_below_as_read">Marque os itens abaixo como lidos</string>
   <string name="discovered_feeds_list">Lista de feeds encontrados</string>
   <string name="toggle_tag_expansion">Alternar expansão de categoria</string>
