--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -1,29 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
   <string name="navigation_drawer_open">Abrir a gaveta de navegação</string>
   <string name="navigation_drawer_close">Fechar a gaveta de navegação</string>
   <string name="action_settings">Configurações</string>
   <string name="add_feed">Adicionar um feed</string>
   <string name="title_activity_edit_feed">Inscreva-se no feed</string>
-  <string name="url">URL</string>
   <string name="tag">Categoria</string>
   <string name="add_feed_search_hint">URL do feed</string>
   <string name="title">Título</string>
-
-  <string name="by_author_on_date">%1$s, %2$s</string>
-  <string name="on_date">%1$s</string>
   <string name="save">Salvar</string>
   <string name="empty_feed_top">Nada para ler. Você gostaria de…</string>
-  <string name="empty_feed_open">
-    <![CDATA[<font color="#607D8B">Abrir</font> um outro feed?]]></string>
-  <string name="empty_feed_add">
-    <![CDATA[<font color="#607D8B">Adicionar</font> mais feeds?]]></string>
+  <string name="empty_feed_open"><![CDATA[<font color="#607D8B">Abrir</font> um outro feed?]]></string>
+  <string name="empty_feed_add"><![CDATA[<font color="#607D8B">Adicionar</font> mais feeds?]]></string>
   <string name="empty_no_feeds_top">Ainda não tem nada para ler.\nPara
     começar
   </string>
-  <string name="empty_no_feeds_add">
-    <![CDATA[<font color="#607D8B">Adicione</font> alguns feeds]]></string>
+  <string name="empty_no_feeds_add"><![CDATA[<font color="#607D8B">Adicione</font> alguns feeds]]></string>
   <string name="search_feed_empty_hint">Digite um endereço do feed</string>
   <string name="mark_as_read">Marcar como lido</string>
   <string name="mark_as_unread">Marcar como não lido</string>
@@ -52,7 +44,6 @@
   <string name="nothing_to_display">Nada para exibir!</string>
   <string name="title_activity_settings">Configurações</string>
   <string name="all_feeds">Todos os feeds</string>
-
   <string name="sync_option_manually">Manualmente</string>
   <string name="sync_option_every_15min">A cada 15min</string>
   <string name="sync_option_every_30min">A cada 30min</string>
@@ -61,7 +52,6 @@
   <string name="sync_option_every_6_hours">A cada 6h</string>
   <string name="sync_option_every_12_hours">A cada 12h</string>
   <string name="sync_option_every_day">Todos os dias</string>
-
   <string name="synchronization">Sincronização</string>
   <string name="only_on_wifi">Somente no WiFi</string>
   <string name="show_thumbnails">Mostrar as miniaturas</string>
@@ -88,7 +78,6 @@
   <string name="open_in_web_view">Abrir em vista Web</string>
   <string name="max_feed_items">O número máximo de itens por feed</string>
   <string name="could_not_load_url">Não foi possível carregar o URL</string>
-
   <string name="theme_system">O mesmo do sistema</string>
   <string name="theme_automatic">Automático</string>
   <string name="theme_day">Dia</string>
@@ -100,17 +89,13 @@
   <string name="send_bug_report">Enviar relatório de falhas</string>
   <string name="no_email_client">Não foi possível abrir o e-mail</string>
   <string name="touch_to_play_video">Toque para reproduzir o vídeo</string>
-  <string name="javascript">Javascript</string>
   <string name="open_feed">Abrir o feed</string>
   <string name="mark_items_above_as_read">Marque os itens acima como lidos</string>
   <string name="mark_items_below_as_read">Marque os itens abaixo como lidos</string>
   <string name="discovered_feeds_list">Lista de feeds encontrados</string>
   <string name="toggle_tag_expansion">Alternar expansão de categoria</string>
-
   <string name="battery_optimization">Otimização da bateria</string>
   <string name="battery_optimization_disabled">Otimização da bateria desativada</string>
   <string name="battery_optimization_enabled">Otimização da bateria ativada</string>
   <string name="preload_custom_tab">Pré-carregar a aba personalizada</string>
-
 </resources>
-
