--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -1,28 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
   <string name="navigation_drawer_open">打开导航菜单</string>
   <string name="navigation_drawer_close">关闭导航菜单</string>
   <string name="action_settings">设置</string>
   <string name="add_feed">添加订阅</string>
   <string name="title_activity_edit_feed">订阅 Feed</string>
-  <string name="url">URL</string>
   <string name="tag">标签</string>
   <string name="add_feed_search_hint">订阅 URL</string>
   <string name="title">标题</string>
-
-  <string name="by_author_on_date">%1$s, %2$s</string>
-  <string name="on_date">%1$s</string>
   <string name="save">保存</string>
   <string name="empty_feed_top">没有可阅读的内容。您是否想要…</string>
-  <string name="empty_feed_open">
-    <![CDATA[<font color="#607D8B">打开</font>另一个订阅？]]></string>
-  <string name="empty_feed_add">
-    <![CDATA[<font color="#607D8B">添加</font>更多订阅？]]></string>
+  <string name="empty_feed_open"><![CDATA[<font color="#607D8B">打开</font>另一个订阅？]]></string>
+  <string name="empty_feed_add"><![CDATA[<font color="#607D8B">添加</font>更多订阅？]]></string>
   <string name="empty_no_feeds_top">尚无可阅读的内容。\n由此开始
   </string>
-  <string name="empty_no_feeds_add">
-    <![CDATA[<font color="#607D8B">添加</font>一些订阅]]></string>
+  <string name="empty_no_feeds_add"><![CDATA[<font color="#607D8B">添加</font>一些订阅]]></string>
   <string name="search_feed_empty_hint">输入一个订阅地址</string>
   <string name="mark_as_read">标记为已读</string>
   <string name="mark_as_unread">标记为未读</string>
@@ -50,7 +42,6 @@
   <string name="nothing_to_display">没有可显示内容！</string>
   <string name="title_activity_settings">设置</string>
   <string name="all_feeds">全部订阅</string>
-
   <string name="sync_option_manually">手动</string>
   <string name="sync_option_every_15min">每 15 分钟</string>
   <string name="sync_option_every_30min">每 30 分钟</string>
@@ -59,7 +50,6 @@
   <string name="sync_option_every_6_hours">每 6 小时</string>
   <string name="sync_option_every_12_hours">每 12 小时</string>
   <string name="sync_option_every_day">每天</string>
-
   <string name="synchronization">同步</string>
   <string name="only_on_wifi">仅通过 WiFi</string>
   <string name="show_thumbnails">显示缩略图</string>
@@ -85,7 +75,6 @@
   <string name="open_link_in_web_view">以网页视图打开链接</string>
   <string name="max_feed_items">每个订阅的最大内容数</string>
   <string name="could_not_load_url">无法加载 URL</string>
-
   <string name="theme_system">跟随系统</string>
   <string name="theme_automatic">自动</string>
   <string name="theme_day">日间</string>
@@ -97,15 +86,12 @@
   <string name="send_bug_report">发送错误报告</string>
   <string name="no_email_client">无法打开电子邮件客户端</string>
   <string name="touch_to_play_video">轻触播放视频</string>
-  <string name="javascript">Javascript</string>
   <string name="open_feed">打开订阅</string>
   <string name="mark_items_below_as_read">标记以下项为已读</string>
   <string name="discovered_feeds_list">已发现订阅列表</string>
   <string name="toggle_tag_expansion">展开/闭合标签</string>
-
   <string name="battery_optimization">电池优化</string>
   <string name="battery_optimization_disabled">电池优化已禁用</string>
   <string name="battery_optimization_enabled">电池优化已启用</string>
   <string name="preload_custom_tab">预加载自定义标签页</string>
-
 </resources>
