--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -15,15 +15,9 @@
   <string name="on_date">%1$s</string>
   <string name="save">Enregistrer</string>
   <string name="empty_feed_top">Rien à lire ici. Souhaitez-vous…</string>
-  <string name="empty_feed_open">
-    <![CDATA[<font color="#607D8B">Ouvrir</font> un autre flux ?]]></string>
-  <string name="empty_feed_add">
-    <![CDATA[<font color="#607D8B">Ajouter</font> d\'autres flux ?]]></string>
-  <string name="empty_no_feeds_top">Rien à lire pour l\'instant.\nCommencer en</string>
-  <string name="empty_no_feeds_add">
-    <![CDATA[<font color="#607D8B">Ajoutant</font> des flux]]></string>
-  <string name="search_feed_empty_hint">Saisir l\'adresse d\'un flux</string>
   <string name="mark_all_as_read">Tout marquer comme lu</string>
+  <string name="empty_feed_open"><![CDATA[<font color="#607D8B">Ouvrir</font> un autre flux?]]></string>
+  <string name="empty_feed_add"><![CDATA[<font color="#607D8B">Ajouter</font> d\'autres flux?]]></string>
   <string name="edit_feed">Éditer le flux</string>
   <string name="delete_feed">Supprimer le flux</string>
   <string name="show_all_items">Voir tout</string>
