--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,23 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
   <string name="navigation_drawer_open">Ouvrir le menu de navigation</string>
   <string name="navigation_drawer_close">Fermer le menu de navigation</string>
   <string name="action_settings">Paramètres</string>
   <string name="add_feed">Ajouter un flux</string>
   <string name="title_activity_edit_feed">S\'abonner au flux</string>
-  <string name="url">URL</string>
-  <string name="tag">Tag</string>
   <string name="add_feed_search_hint">URL du flux</string>
   <string name="title">Titre</string>
-
   <string name="by_author_on_date">par %1$s, le %2$s</string>
-  <string name="on_date">%1$s</string>
   <string name="save">Enregistrer</string>
   <string name="empty_feed_top">Rien à lire ici. Souhaitez-vous…</string>
-  <string name="mark_all_as_read">Tout marquer comme lu</string>
-  <string name="empty_feed_open"><![CDATA[<font color="#607D8B">Ouvrir</font> un autre flux?]]></string>
+  <string name="empty_feed_open"><![CDATA[<font color="#607D8B">Ouvrir</font> un autre flux ?]]></string>
   <string name="empty_feed_add"><![CDATA[<font color="#607D8B">Ajouter</font> d\'autres flux?]]></string>
+  <string name="search_feed_empty_hint">Saisir l\'adresse d\'un flux</string>
+  <string name="mark_all_as_read">Tout marquer comme lu</string>
   <string name="edit_feed">Éditer le flux</string>
   <string name="delete_feed">Supprimer le flux</string>
   <string name="show_all_items">Voir tout</string>
@@ -40,14 +36,12 @@
   <string name="nothing_to_display">Rien à afficher !</string>
   <string name="title_activity_settings">Paramètres</string>
   <string name="all_feeds">Tous les flux</string>
-
   <string name="sync_option_manually">Manuellement</string>
   <string name="sync_option_every_hour">Toutes les heures</string>
   <string name="sync_option_every_3_hours">Toutes les 3 heures</string>
   <string name="sync_option_every_6_hours">Toutes les 6 heures</string>
   <string name="sync_option_every_12_hours">Toutes les 12 heures</string>
   <string name="sync_option_every_day">Tous les jours</string>
-
   <string name="synchronization">Actualisation</string>
   <string name="only_on_wifi">Seulement en Wi-Fi</string>
   <string name="may_result_data_charges">Peut entraîner des frais de transmission de données supplémentaires.</string>
@@ -58,5 +52,4 @@
   <string name="include_mobile_hotspots">Inclure les hotspots mobiles</string>
   <string name="updated_feeds">Flux mis à jour</string>
   <string name="selected">Sélectionné</string>
-
 </resources>
