--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -1,25 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
   <string name="navigation_drawer_open">Apri menù di navigazione</string>
   <string name="navigation_drawer_close">Chiudi menù di navigazione</string>
   <string name="action_settings">Impostazioni</string>
   <string name="add_feed">Aggiungi feed</string>
   <string name="title_activity_edit_feed">Abbonati a un feed</string>
-  <string name="url">URL</string>
   <string name="tag">Categoria</string>
   <string name="add_feed_search_hint">URL del feed</string>
   <string name="title">Titolo</string>
-
   <string name="by_author_on_date">da %1$s, %2$s</string>
-  <string name="on_date">%1$s</string>
   <string name="save">Salva</string>
   <string name="empty_feed_top">Nulla da leggere. Vorresti…</string>
-  <string name="empty_feed_open">
-    <![CDATA[<font color="#607D8B">Aprire</font> un altro feed?]]></string>
-  <string name="empty_feed_add">
-    <![CDATA[<font color="#607D8B">Aggiungere</font> altri feed?]]></string>
-
+  <string name="empty_feed_open"><![CDATA[<font color="#607D8B">Aprire</font> un altro feed?]]></string>
+  <string name="empty_feed_add"><![CDATA[<font color="#607D8B">Aggiungere</font> altri feed?]]></string>
   <string name="search_feed_empty_hint">Inserisci indirizzo del feed</string>
   <string name="mark_as_read">Segna come letto</string>
   <string name="mark_as_unread">Segna come non letto</string>
@@ -35,6 +28,7 @@
   <string name="dont_notify_for_new_items">Interrompi notifiche</string>
   <string name="toggle_read_status">Inverti lo stato di lettura</string>
   <string name="open_link_in_browser">Apri il link nel browser</string>
+  <string name="open_in_browser">Apri nel browser</string>
   <string name="open_enclosed_media">Apri materiale incorporato</string>
   <string name="sync">Sincronizza</string>
   <string name="export_feeds_to_opml">Esporta feed come OPML</string>
@@ -47,7 +41,6 @@
   <string name="nothing_to_display">Nulla da visualizzare!</string>
   <string name="title_activity_settings">Impostazioni</string>
   <string name="all_feeds">Tutti i feed</string>
-
   <string name="sync_option_manually">Manualmente</string>
   <string name="sync_option_every_15min">Ogni 15 minuti</string>
   <string name="sync_option_every_30min">Ogni 30 minuti</string>
@@ -56,15 +49,16 @@
   <string name="sync_option_every_6_hours">Ogni 6 ore</string>
   <string name="sync_option_every_12_hours">Ogni 12 ore</string>
   <string name="sync_option_every_day">Ogni giorno</string>
-
   <string name="synchronization">Sincronizzazione</string>
   <string name="only_on_wifi">Solo con WiFi</string>
+  <string name="show_thumbnails">Mostra le thumbnail</string>
   <string name="may_result_data_charges">Può portare costi aggiuntivi.</string>
   <string name="only_when_charging">Solo durante la ricarica</string>
   <string name="image_loading">Scaricamento delle immagini</string>
   <string name="no_activity_for_link">Impossibile trovare un\'applicazione per aprire questo link con</string>
   <string name="check_for_updates">Controlla per aggiornamenti</string>
   <string name="on_startup">All\'avvio</string>
+  <string name="show_fab">Mostra a schermo il pulsante \"Segna tutti come letti\"</string>
   <string name="include_mobile_hotspots">Includi hotspot mobili</string>
   <string name="updated_feeds">Feed aggiornati</string>
   <string name="selected">Selezionato</string>
@@ -73,37 +67,31 @@
   <string name="open_in_reader">Lettore</string>
   <string name="open_in_webview">Web View</string>
   <string name="open_in_default_browser">Browser predefinito</string>
+  <string name="open_in_custom_tab">Custom Tab</string>
   <string name="open_item_by_default_with">Apri gli elementi con</string>
   <string name="open_links_with">Apri i link con</string>
   <string name="reader_settings">Lettore</string>
   <string name="open_link_in_web_view">Apri i link nella Web View</string>
+  <string name="open_in_web_view">Apri in una Web View</string>
   <string name="max_feed_items">Numero massimo di elementi per feed</string>
   <string name="could_not_load_url">Impossibile caricare l\'URL</string>
-
   <string name="theme_system">Sistema</string>
   <string name="theme_automatic">Automatico</string>
   <string name="theme_day">Giorno</string>
   <string name="theme_night">Notte</string>
   <string name="theme">Tema</string>
-  <string name="send_bug_report">Invia una segnalazione bug</string>
-  <string name="no_email_client">Impossibile aprire il client email</string>
-  <string name="touch_to_play_video">Tocca per far parire i video</string>
-  <string name="javascript">Javascript</string>
-  <string name="open_feed">Apri feed</string>
-  <string name="mark_items_below_as_read">Segna gli elementi in basso come letti</string>
-
-  <string name="battery_optimization">Ottimizzazione della batteria</string>
-  <string name="battery_optimization_disabled">Ottimizzazione disabilitata</string>
-  <string name="battery_optimization_enabled">Ottimizzazione abilitata</string>
-  <string name="discovered_feeds_list">Lista dei feed trovati</string>
-  <string name="open_in_browser">Apri nel browser</string>
-  <string name="open_in_custom_tab">Custom Tab</string>
-  <string name="open_in_web_view">Apri in una Web View</string>
-  <string name="preload_custom_tab">Precarica le Custom Tab</string>
-  <string name="show_fab">Mostra a schermo il pulsante \"Segna tutti come letti\"</string>
-  <string name="show_thumbnails">Mostra le thumbnail</string>
   <string name="sort_newest_first">Dal più recente</string>
   <string name="sort_oldest_first">Dal più vecchio</string>
   <string name="sort">Ordina</string>
+  <string name="send_bug_report">Invia una segnalazione bug</string>
+  <string name="no_email_client">Impossibile aprire il client email</string>
+  <string name="touch_to_play_video">Tocca per far parire i video</string>
+  <string name="open_feed">Apri feed</string>
+  <string name="mark_items_below_as_read">Segna gli elementi in basso come letti</string>
+  <string name="discovered_feeds_list">Lista dei feed trovati</string>
   <string name="toggle_tag_expansion">Attiva l\'espansione dei tag</string>
+  <string name="battery_optimization">Ottimizzazione della batteria</string>
+  <string name="battery_optimization_disabled">Ottimizzazione disabilitata</string>
+  <string name="battery_optimization_enabled">Ottimizzazione abilitata</string>
+  <string name="preload_custom_tab">Precarica le Custom Tab</string>
 </resources>
