--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -1,26 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
   <string name="navigation_drawer_open">ナビゲーションドロワーを開く</string>
   <string name="navigation_drawer_close">ナビゲーションドロワーを閉じる</string>
   <string name="action_settings">設定</string>
   <string name="add_feed">フィードを追加</string>
   <string name="title_activity_edit_feed">フィードを購読</string>
-  <string name="url">URL</string>
   <string name="tag">タグ</string>
   <string name="add_feed_search_hint">フィードの URL</string>
   <string name="title">タイトル</string>
-
   <string name="by_author_on_date">作者 %1$s, %2$s</string>
-  <string name="on_date">%1$s</string>
   <string name="save">保存</string>
   <string name="empty_feed_top">ここに読むものはありません。 したいことは…</string>
-  <string name="empty_feed_open">
-        <![CDATA[別のフィードを <font color="#607D8B">開く</font>?]]></string>
-  <string name="empty_feed_add">
-        <![CDATA[フィードを <font color="#607D8B">追加</font>?]]></string>
-
-
+  <string name="empty_feed_open"><![CDATA[別のフィードを <font color="#607D8B">開く</font>?]]></string>
+  <string name="empty_feed_add"><![CDATA[フィードを <font color="#607D8B">追加</font>?]]></string>
   <string name="search_feed_empty_hint">フィードのアドレスを入力</string>
   <string name="mark_all_as_read">すべて既読にする</string>
   <string name="edit_feed">フィードを編集</string>
@@ -43,12 +35,10 @@
   <string name="share">共有</string>
   <string name="no_such_feed">そのようなフィードは見つかりませんでした。 https を使用してみてください。</string>
   <string name="nothing_to_display">表示するものはありません!</string>
-
   <string name="sync_option_manually">マニュアル</string>
   <string name="sync_option_every_hour">毎時</string>
   <string name="sync_option_every_3_hours">3時間ごと</string>
   <string name="sync_option_every_6_hours">6時間ごと</string>
   <string name="sync_option_every_12_hours">12時間ごと</string>
   <string name="sync_option_every_day">毎日</string>
-
 </resources>
