--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -35,6 +35,7 @@
   <string name="share">共有</string>
   <string name="no_such_feed">そのようなフィードは見つかりませんでした。 https を使用してみてください。</string>
   <string name="nothing_to_display">表示するものはありません!</string>
+  <string name="title_activity_settings">設定</string>
   <string name="sync_option_manually">マニュアル</string>
   <string name="sync_option_every_hour">毎時</string>
   <string name="sync_option_every_3_hours">3時間ごと</string>
