--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,8 +11,8 @@
   <string name="add_feed_search_hint">URL to feed</string>
   <string name="title">Title</string>
 
-  <string name="by_author_on_date">%1$s, %2$s</string>
-  <string name="on_date">%1$s</string>
+  <string name="by_author_on_date" comment="1 is the author, 2 is the date. So the default format will be shown as&#10;&#10;John Smith, Saturday, 9 January 2021 15:49&#10;&#10;if better for other language, it can be changed. For example &#10;&#10;%1$s on %2$s:&#10;&#10;John Smith on Saturday, 9 January 2021 15:49">%1$s, %2$s</string>
+  <string name="on_date" comment="1 is the date. Used in the feed view.">%1$s</string>
   <string name="save">Save</string>
   <string name="empty_feed_top">Nothing to read here. Would you like to…</string>
   <string name="empty_feed_open"><![CDATA[<font color="#607D8B">Open</font> another feed?]]></string>
